# badge2024

./: .gitignore  .gitmodules  BADGE-APP-HOWTO.md  CHANGELOG.txt  CMakeLists.txt  README.md  pico_extras_import.cmake  run_cmake.sh  run_cmake_sdl_sim.sh  run_cmake_sim.sh  run_cmake_wasm.sh  scan_build.sh
.github/: pull_request_template.md
source/: CMakeLists.txt  CPPLINT.cfg  Doxyfile  lint.sh  main.c
source/apps/: 2048.c  2048.h  CMakeLists.txt  aagunner.c  aagunner.h  about_badge.c  about_badge.h  asteroids.c  asteroids.h  badge-app-template.c  badge-app-template.h  badge_monsters.c  badge_monsters.h  badgey.c  badgey.h  battlezone.c  battlezone.h  blinkenlights.c  blinkenlights.h  clue.c  clue.h  conductor.c  conductor.h  cube.c  cube.h  default_menu_app.c  default_menu_app.h  etch-a-sketch.c  etch-a-sketch.h  game_of_life.c  game_of_life.h  ghost-detector.c  ghost-detector.h  gulag.c  gulag.h  hacking_simulator.c  hacking_simulator.h  image-test.c  image-test.h  lunarlander.c  (+32 more)
source/apps/badge_monster_drawings/: babyyoda.h  babyyoda1.h  bluekeep.h  boothole.h  btc.h  eddie.h  freshmon.h  ghostcat.h  goat_mon.h  godzilla.h  gophermon.h  heartbleed.h  hrvamon.h  mcturtle.h  mythosaur.h  octocat.h  octomon.h  othermon.h  smbghost.h  smileymon.h  sourdough_bread.h  spectre.h  stacksmasher.h  tuxmon.h  worm.h  zombieload.h
source/apps/clue_assets/: CMakeLists.txt  ballroom.c  ballroom.h  billiards_room.c  billiards_room.h  candlestick.c  candlestick.h  clue_assets.h  col_mustard.c  col_mustard.h  conservatory.c  conservatory.h  dining_room.c  dining_room.h  hall.c  hall.h  images.yaml  kitchen.c  kitchen.h  knife.c  knife.h  lead_pipe.c  lead_pipe.h  library.c  library.h  lounge.c  lounge.h  miss_scarlett.c  miss_scarlett.h  mr_green.c  mr_green.h  mrs_peacock.c  mrs_peacock.h  ms_white.c  ms_white.h  prof_plum.c  prof_plum.h  reprocess_images.sh  revolver.c  revolver.h  (+6 more)
source/apps/hacking_simulator_drawings/: pipes.h
source/apps/maze_drawings/: bones_points.h  chalice_points.h  chest_points.h  cobra_points.h  down_ladder_points.h  dragon_points.h  grenade_points.h  orc_points.h  phantasm_points.h  player_points.h  potion_points.h  scroll_points.h  shield_points.h  sword_points.h  up_ladder_points.h
source/apps/new_badge_monsters/: .editorconfig  CMakeLists.txt  new_badge_monsters.c  new_badge_monsters.h  new_badge_monsters_ir.c  new_badge_monsters_ir.h
source/apps/new_badge_monsters_assets/: AccessControlAlligator.h  Access_Control_Alligator.c  AdwareAnteater.h  Adware_Anteater.c  BackdoorBee.h  Backdoor_Bee.c  BotnetBat.h  Botnet_Bat.c  Brute-Force_Baboon.c  BruteForceBaboon.h  Brute_Force_Baboon.c  CMakeLists.txt  CryptoRaptor.h  Crypto_Raptor.c  DDOS_Dragon.c  DDoS_Dragon.h  DNS_Dolphin.c  DNS_Dolphin.h  ExploitEagle.h  Exploit_Eagle.c  FirewallFlyer.h  Firewall_Flyer.c  HackerHawk.h  Hacker_Hawk.c  IDS_Impalas.c  IDS_Impalas.h  IntrusionDetectionIguana.h  Intrusion_Detection_Iguana.c  KeyloggerKoala.h  Keylogger_Koala.c  MalwareMantis.h  Malware_Mantis.c  PacketSnifferPuma.h  Packet_Sniffer_Puma.c  PenTestPenguin.h  PenTest_Penguin.c  PhishingPhoenix.h  Phishing_Phoenix.c  ProxyPorcupine.h  Proxy_Porcupine.c  (+31 more)
source/apps/new_badge_monsters_assets/2024-badge-monsters/: 2024-badge-monsters.h
source/apps/slot-machine-assets/: slot-astronaut.h  slot-comet.h  slot-earth.h  slot-galaxy.h  slot-machine-assets.h  slot-none.h  slot-planet.h  slot-rocket.h  slot-star.h
source/cli/: CMakeLists.txt  cli.c  cli.h  cli_button.c  cli_button.h  cli_flash.c  cli_flash.h  cli_ir.c  cli_ir.h  cli_led.c  cli_led.h
source/core/: CMakeLists.txt  RVAsec-13.c  a_star.c  a_star.h  achievements.c  achievements.h  badge.c  badge.h  bline.c  bline.h  dynmenu.c  dynmenu.h  fxp_sqrt.c  fxp_sqrt.h  key_value_storage.c  key_value_storage.h  key_value_storage_test.c  menu.c  menu.h  menu_icon.h  music.c  music.h  palette.c  palette.h  schedule.c  screensavers.c  screensavers.h  settings.c  settings.h  stacktrace.c  stacktrace.h  test_a_star.c  trig.c  trig.h  ui.c  ui.h  utils.h  xorshift.c  xorshift.h
source/display/: CMakeLists.txt  assetList.c  assetList.h  assets.c  assets.h  colors.h  framebuffer.c  framebuffer.h  x11_colors.h
source/display/assets/: drbob.h  font8x8-rotated.xbm.h  font8x8.xbm.h  hackrva4bit.h  hackrvanewlogo.h  holly.h  rvasec2016.h  rvasec_logo.h
source/display/assets/hires/: drbob.h  hackrva4bit.h  holly01.c  holly02.c  holly03.c  rvasec2016.h  rvasec_logo.h  rvasecbug2.h
source/display/assets/lores/: drbob.h  lores.h
source/hal/: CMakeLists.txt  accelerometer.h  accelerometer_lis2dh12.c  accelerometer_sim.c  analog.h  analog_rp2040.c  analog_sim.c  audio.h  audio_common.c  audio_output.h  audio_output_rp2040.c  audio_output_sim.c  audio_rp2040.c  audio_sim.c  button.h  button_coords.c  button_coords.h  button_rp2040.c  button_sdl_sim.c  button_sdl_ui.h  button_sim.c  color_sensor.h  color_sensor_cls16d2444_rp2040.c  color_sensor_sim.c  delay.h  delay_rp2040.c  delay_sim.c  display.h  display_s6b33.h  display_s6b33_rp2040.c  display_s6b33_sim.c  display_st7735_rp2040_internal.h  display_st7735s_rp2040.c  flash_storage.h  flash_storage_config.h  flash_storage_rp2040.c  flash_storage_sim.c  init.h  init_rp2040.c  init_sdl_sim.c  (+35 more)
source/hal/ir_library/: CMakeLists.txt  README
source/hal/ir_library/nec_receive_library/: nec_receive.c  nec_receive.pio
source/hal/ir_library/nec_transmit_library/: nec_carrier_control.pio
source/hal/mic_library/: CMakeLists.txt
source/hal/mic_library/src/: pdm_microphone.c
tools/: .gitignore  Makefile  README.md  asset_converter.py  feed-asset-converter.c  png-to-badge-asset.1  png-to-badge-asset.c  requirements.txt  rotate-font.c  wasm_serve.go  x11-colors-to-badge-colors.c
web/: .eleventy.js  .gitignore  .lazyimages.json  Makefile  README.md  deploy_to_gh-pages.sh  package.json  run_local.sh
web/_data/: site.json
web/deployments/: wasmsim.dockerfile
web/scripts/: build_badgeappdev_docs.sh  build_docker.sh  build_user_docs.sh  deploy_to_gh-pages.sh  download_mdbook.sh  install_node_modules.sh  (+2 more)
(+36 files in other folders)
